--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -5,3 +5,8 @@
 .two {
 	background-color: rgb(0, 255, 255);
 }
+
+.common {
+	font-size: 28px;
+	font-family: 'Helvetica', 'Times New Roman', sans-serif;
+}
