--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,9 +1,10 @@
 .one {
 	background-color: black;
+	color: rgb(255, 255, 255);
 }
 
 .two {
-	background-color: rgb(0, 255, 255);
+	background-color: rgb(255, 255, 0);
 }
 
 .common {
