--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,17 +13,20 @@ body {
 .title {
   background: #e3f4ff;
   padding: 10px;
+  margin: 0 0 10px;
 }
 
 .content {
   background: #e3f4ff;
   padding: 20px 10px;
+  margin-bottom: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 10px;
   text-align: center;
+
 }
 
 button {
